# dojson

./: .checkignore  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE-NOTES.rst  docker-compose.yml  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/actions/pre-install/: actions.yml
.github/workflows/: pypi-release.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  license.rst  usage.rst
dojson/: __init__.py  __main__.py  _compat.py  cli.py  errors.py  handlers.py  overdo.py  utils.py  version.py
dojson/cli/: __init__.py  command.py  utils.py
dojson/contrib/: __init__.py
dojson/contrib/marc21/: __init__.py  model.py  utils.py
dojson/contrib/marc21/fields/: __init__.py  ad00x.py  ad01x09x.py  ad1xx.py  ad1xx3xx.py  ad25x28x.py  ad260360.py  ad3xx.py  ad4xx.py  ad5xx.py  ad64x.py  ad663666.py  ad66768x.py  ad6xx.py  ad70x75x.py  ad76x78x.py  ad7xx.py  ad84188x.py  ad8xx.py  adleader.py  bd00x.py  bd01x09x.py  bd1xx.py  bd20x24x.py  bd25x28x.py  bd3xx.py  bd4xx.py  bd5xx.py  bd6xx.py  bd70x75x.py  bd76x78x.py  bd80x83x.py  bd84188x.py  bdleader.py  hd00x.py  hd0xx.py  hd3xx5xx84x.py  hd85xhd88x.py
dojson/contrib/marc21/schemas/: __init__.py  ad01x09x.json  ad1xx3xx.json  ad4xx.json  ad5xx.json  bd01x09x.json  bd1xx.json  bd20x24x.json  bd25x28x.json  bd3xx.json  bd4xx.json  bd5xx.json  bd6xx.json  bd70x75x.json  bd76x78x.json  bd80x83x.json  bd84188x.json  hd85xhd88x.json  marc21_authority.json
dojson/contrib/marc21/schemas/marc21/authority/: ad-v1.0.0.json  ad-v1.0.1.json  ad-v1.0.2.json  ad00x.json  ad1xx3xx.json  ad260360.json  ad5xx.json  ad64x.json  ad663666.json  ad66768x-v1.0.1.json  ad66768x.json  ad7xx.json
dojson/contrib/marc21/schemas/marc21/bibliographic/: bd-v1.0.0.json  bd-v1.0.1.json  bd-v1.0.2.json  bd00x-v1.0.1.json  bd00x.json  bd01x09x-v1.0.1.json  bd01x09x.json  bd1xx-v1.0.1.json  bd1xx.json  bd20x24x-v1.0.1.json  bd20x24x.json  bd25x28x.json  bd3xx-v1.0.1.json  bd3xx.json  bd4xx-v1.0.1.json  bd4xx.json  bd5xx-v1.0.1.json  bd5xx.json  bd6xx-v1.0.1.json  bd6xx.json  bd70x75x-v1.0.1.json  bd70x75x.json  bd76x78x.json  bd80x83x-v1.0.1.json  bd80x83x.json  bd84188x-v1.0.1.json  bd84188x.json  bdleader.json
dojson/contrib/marc21/schemas/marc21/holdings/: hd-v1.0.0.json  hd00x.json  hd0xx.json  hd3xx5xx84x.json
dojson/contrib/marc21_liberal/: __init__.py  model.py  utils.py
dojson/contrib/marc21_liberal/fields/: __init__.py  ad00x.py  ad01x09x.py  ad1xx.py  ad1xx3xx.py  ad25x28x.py  ad260360.py  ad3xx.py  ad4xx.py  ad5xx.py  ad64x.py  ad663666.py  ad66768x.py  ad6xx.py  ad70x75x.py  ad76x78x.py  ad7xx.py  ad84188x.py  ad8xx.py  ad999.py  adleader.py  bd00x.py  bd01x09x.py  bd1xx.py  bd20x24x.py  bd25x28x.py  bd3xx.py  bd4xx.py  bd5xx.py  bd6xx.py  bd70x75x.py  bd76x78x.py  bd80x83x.py  bd84188x.py  bd999.py  bdleader.py  hd00x.py  hd0xx.py  hd3xx5xx84x.py  hd85xhd88x.py
dojson/contrib/marc21_liberal/schemas/marc21/authority/: ad-v1.0.0.json  ad01x09x-v1.0.1.json  ad01x09x.json  ad260360-v1.0.1.json  ad4xx-v1.0.1.json  ad4xx.json  ad5xx-v1.0.1.json  ad8xx.json  adleader.json
dojson/contrib/marc21_liberal/schemas/marc21/bibliographic/: bd-v1.0.0.json  bd00x.json  bd1xx.json  bd20x24x.json  bd3xx.json  bd70x75x.json  bd80x83x.json  bd84188x.json
dojson/contrib/marc21_liberal/schemas/marc21/holdings/: hd-v1.0.0.json
dojson/contrib/to_marc21/: __init__.py  model.py  utils.py
dojson/contrib/to_marc21/fields/: __init__.py  ad00x.py  ad01x09x.py  ad1xx.py  ad25x28x.py  ad3xx.py  ad4xx.py  ad5xx.py  ad6xx.py  ad70x75x.py  ad76x78x.py  ad84188x.py  bd00x.py  bd01x09x.py  bd1xx.py  bd20x24x.py  bd25x28x.py  bd3xx.py  bd4xx.py  bd5xx.py  bd6xx.py  bd70x75x.py  bd76x78x.py  bd80x83x.py  bd84188x.py  bdleader.py
dojson/contrib/to_marc21_liberal/: __init__.py  model.py  utils.py
dojson/contrib/to_marc21_liberal/fields/: ad00x.py  ad01x09x.py  ad1xx.py  ad25x28x.py  ad3xx.py  ad4xx.py  ad5xx.py  ad6xx.py  ad70x75x.py  ad76x78x.py  ad84188x.py  ad999.py  bd00x.py  bd01x09x.py  bd1xx.py  bd20x24x.py  bd25x28x.py  bd3xx.py  bd4xx.py  bd5xx.py  bd6xx.py  bd70x75x.py  bd76x78x.py  bd80x83x.py  bd84188x.py  bd999.py  bdleader.py
dojson/scripts/: utils_add_order.py  utils_create_xml.py
scripts/: utils_add_order.py  utils_create_xml.py
tests/: demo_marc21_full.xml  demo_marc21_to_dc.converted.xml  demo_marc21_to_dc.xml  demo_marc21_to_dc.xslt  test_cli.py  test_contrib_marc21.py  test_contrib_to_marc21_utils.py  test_core.py  test_utils.py
tests/data/: test_1.xml  test_10.xml  test_11.xml  test_12.xml  test_13.xml  test_14.xml  test_15.xml  test_16.xml  test_2.xml  test_3.xml  test_4.xml  test_6.xml  test_7.xml  test_8.xml  test_9.xml  test_cds_marc21.xml
tests/data/authority/: ad01x09x.xml  ad1xx.xml  ad25x28x.xml  ad3xx.xml  ad4xx.xml  ad5xx.xml  ad6xx.xml  ad70x75x.xml  ad76x78x.xml  ad84188x.xml
tests/data/handcrafted/: bd01x09x.xml  bd3xx.xml  bd6xx.xml  bdleader.xml  text_incorrect_marc21.xml
tests/data/liberal/: datafields.xml  datafields_2.xml  indicators.xml  liberal_all.xml  subfields.xml  subfields_inds.xml
tests/data/liberal/authority/: datafields.xml  datafields_inds.xml  indicators.xml  subfields.xml  subfields_inds.xml
tests/data/library_of_congress/: bd01x09x.xml  bd1xx.xml  bd20x24x.xml  bd25x28x.xml  bd3xx.xml  bd4xx.xml  bd5xx.xml  bd6xx.xml  bd70x75x.xml  bd76x78x.xml  bd80x83x.xml  bd84188x.xml
