# SPDX-FileCopyrightText: 2015, 2016, 2017 CERN.
# SPDX-FileCopyrightText: 2015, 2016 CERN.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "dojson"
description = "DoJSON is a simple Pythonic JSON to JSON converter."
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
  { name = "Invenio collaboration", email = "info@inveniosoftware.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1",
  "lxml>=4.1.1",
  "simplejson>=3.8.1",
]
dynamic = ["version"]

[project.urls]
Repository = "http://github.com/inveniosoftware/dojson/"

[project.scripts]
dojson = "dojson.cli:cli"

[project.entry-points."dojson.cli"]
do = "dojson.cli.command:process_do"
missing = "dojson.cli.command:process_missing"
schema = "dojson.cli.command:process_schema"
validate = "dojson.cli.command:process_validate"

[project.entry-points."dojson.cli.dump"]
json = "dojson.utils:dump"
marcxml = "dojson.contrib.to_marc21.utils:dumps"

[project.entry-points."dojson.cli.load"]
json = "dojson.utils:load"
marcxml = "dojson.contrib.marc21.utils:load"

[project.entry-points."dojson.cli.rule"]
marc21 = "dojson.contrib.marc21:marc21"
marc21_authority = "dojson.contrib.marc21:marc21_authority"
marc21_holdings = "dojson.contrib.marc21:marc21_holdings"
to_marc21 = "dojson.contrib.to_marc21:to_marc21"
to_marc21_authority = "dojson.contrib.to_marc21:to_marc21_authority"

[project.entry-points."dojson.contrib.marc21"]
bd00x = "dojson.contrib.marc21.fields.bd00x"
bd01x09x = "dojson.contrib.marc21.fields.bd01x09x"
bd1xx = "dojson.contrib.marc21.fields.bd1xx"
bd20x24x = "dojson.contrib.marc21.fields.bd20x24x"
bd25x28x = "dojson.contrib.marc21.fields.bd25x28x"
bd3xx = "dojson.contrib.marc21.fields.bd3xx"
bd4xx = "dojson.contrib.marc21.fields.bd4xx"
bd5xx = "dojson.contrib.marc21.fields.bd5xx"
bd6xx = "dojson.contrib.marc21.fields.bd6xx"
bd70x75x = "dojson.contrib.marc21.fields.bd70x75x"
bd76x78x = "dojson.contrib.marc21.fields.bd76x78x"
bd80x83x = "dojson.contrib.marc21.fields.bd80x83x"
bd84188x = "dojson.contrib.marc21.fields.bd84188x"
bdleader = "dojson.contrib.marc21.fields.bdleader"

[project.entry-points."dojson.contrib.marc21_authority"]
ad00x = "dojson.contrib.marc21.fields.ad00x"
ad01x09x = "dojson.contrib.marc21.fields.ad01x09x"
ad1xx3xx = "dojson.contrib.marc21.fields.ad1xx3xx"
ad260360 = "dojson.contrib.marc21.fields.ad260360"
ad4xx = "dojson.contrib.marc21.fields.ad4xx"
ad5xx = "dojson.contrib.marc21.fields.ad5xx"
ad64x = "dojson.contrib.marc21.fields.ad64x"
ad663666 = "dojson.contrib.marc21.fields.ad663666"
ad66768x = "dojson.contrib.marc21.fields.ad66768x"
ad7xx = "dojson.contrib.marc21.fields.ad7xx"
ad8xx = "dojson.contrib.marc21.fields.ad8xx"
adleader = "dojson.contrib.marc21.fields.adleader"

[project.entry-points."dojson.contrib.marc21_holdings"]
hd00x = "dojson.contrib.marc21.fields.hd00x"
hd0xx = "dojson.contrib.marc21.fields.hd0xx"
hd3xx5xx84x = "dojson.contrib.marc21.fields.hd3xx5xx84x"
hd85xhd88x = "dojson.contrib.marc21.fields.hd85xhd88x"

[project.entry-points."dojson.contrib.to_marc21"]
bd00x = "dojson.contrib.to_marc21.fields.bd00x"
bd01x09x = "dojson.contrib.to_marc21.fields.bd01x09x"
bd1xx = "dojson.contrib.to_marc21.fields.bd1xx"
bd20x24x = "dojson.contrib.to_marc21.fields.bd20x24x"
bd25x28x = "dojson.contrib.to_marc21.fields.bd25x28x"
bd3xx = "dojson.contrib.to_marc21.fields.bd3xx"
bd4xx = "dojson.contrib.to_marc21.fields.bd4xx"
bd5xx = "dojson.contrib.to_marc21.fields.bd5xx"
bd6xx = "dojson.contrib.to_marc21.fields.bd6xx"
bd70x75x = "dojson.contrib.to_marc21.fields.bd70x75x"
bd76x78x = "dojson.contrib.to_marc21.fields.bd76x78x"
bd80x83x = "dojson.contrib.to_marc21.fields.bd80x83x"
bd84188x = "dojson.contrib.to_marc21.fields.bd84188x"
bdleader = "dojson.contrib.to_marc21.fields.bdleader"

[project.entry-points."dojson.contrib.to_marc21_authority"]
ad00x = "dojson.contrib.to_marc21.fields.ad00x"
ad01x09x = "dojson.contrib.to_marc21.fields.ad01x09x"
ad1xx = "dojson.contrib.to_marc21.fields.ad1xx"
ad25x28x = "dojson.contrib.to_marc21.fields.ad25x28x"
ad3xx = "dojson.contrib.to_marc21.fields.ad3xx"
ad4xx = "dojson.contrib.to_marc21.fields.ad4xx"
ad5xx = "dojson.contrib.to_marc21.fields.ad5xx"
ad64x = "dojson.contrib.to_marc21.fields.ad6xx"
ad70x75x = "dojson.contrib.to_marc21.fields.ad70x75x"
ad76x78x = "dojson.contrib.to_marc21.fields.ad76x78x"
ad84188x = "dojson.contrib.to_marc21.fields.ad84188x"

[project.optional-dependencies]
docs = [
  "sphinx>=3",
]
jsonschema = [
  "jsonschema>=2.5.1",
]
tests = [
  "jsonschema>=3.0",
  "mock>=1.3.0",
  "pytest-invenio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dojson/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/dojson",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=dojson --cov-report=term-missing'
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
testpaths = "tests dojson"
live_server_scope = "module"
